--- a/style.css
+++ b/style.css
@@ -73,6 +73,15 @@ h5{
 }
 /*Fim padrões de fonte*/
 
+button{
+    cursor:pointer;
+}
+
+a{
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /* SVG Default icons */
 .icon {
     display: inline-block;
@@ -208,7 +217,7 @@ h5{
 .call-to-action {
     width: 98.6%;
     position: absolute;
-    right: 45%;
+    right: 46%;
     transform: rotate(-90deg);
 }
 
@@ -553,6 +562,7 @@ h5{
     height: auto;
     width: 23%;
     margin: -2.5% 0 0 0;
+    border:0;
     border-color: var(--color-fifth);
 }
 
@@ -561,11 +571,10 @@ h5{
 /*Quinto bloco*/
 .quinto-bloco {
     display: flex; 
-    background-color: #fff;
+    background-color: var(--default-black);
 }
 .quinto-bloco .right-block {
     width: 50vw;
-    padding: 10% 0 0 5%;
 }
 .quinto-bloco .right-block .cards{
     display: flex;
@@ -598,8 +607,8 @@ h5{
 
 /*Sexto bloco*/
 .sexto-bloco{
-    padding: 10% 17% 10% 17%;
-
+    padding: 10% 17% 0 17%;
+    background: var(--default-black);
 }
 .sexto-bloco .cards{
     display: flex;
@@ -983,8 +992,16 @@ h5{
     position: relative;
 }
 
-.terceiro-bloco .left-block .box-container svg{
-    max-width: 50%;
+.terceiro-bloco .left-block .box-container .viking {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.terceiro-bloco .left-block .box-container .viking svg{
+    margin-left: 6%;
 }
 
 
