--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ a{
 
 
 .quarto-bloco .cards-box .card .card-text {
-    padding: 40px 20%;
+    padding: 10px 20%;
     height:auto;
 }
 
@@ -548,7 +548,7 @@ a{
     height: 150px;
 }
 .quarto-bloco .cards-box .card .card-text {
-    padding: 40px 17%;
+    padding: 10px 17%;
 }
 .quarto-bloco .cards-box .card:hover .card-text h5 {
     padding-bottom: 35px;
@@ -572,7 +572,33 @@ a{
 .quinto-bloco {
     display: flex; 
     background-color: var(--default-black);
+    color:white;
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
 }
+
+.quinto-bloco h2{
+    position: relative;
+    z-index: 2;
+    pointer-events: none;
+}
+
+.quinto-bloco h5{
+    font-size: 18px;
+    margin: .5em 0;
+    color: #dc3441;
+    position: relative;
+    z-index: 2;
+    pointer-events: none;
+}
+
+
+.quinto-bloco p {
+    line-height: 1.5;
+    position: relative;
+    z-index: 2;
+    pointer-events: none;
+}
+
 .quinto-bloco .right-block {
     width: 50vw;
 }
@@ -581,13 +607,33 @@ a{
 }
 .quinto-bloco .right-block .cards .card{
     padding: 0 20% 0 0;
+    position: relative;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.quinto-bloco .right-block .cards .card .card-header{
-    padding: 0 0 30% 0;
+
+
+.quinto-bloco .right-block .cards .card .card-header svg{
+    width: 150px;
+    height: 150px;
 }
+
 .quinto-bloco .right-block .cards .card .card-container{
     padding: 30% 0 0 0;
+    position: relative;
 }
+
+.quinto-bloco .right-block .cards .card .card-container h4{
+    margin: 0 0 15px 0;
+    pointer-events: none;
+}
+.quinto-bloco .right-block .cards .card .card-container p{
+    font-size: 13px;
+    pointer-events: none;
+}
+
 .quinto-bloco .right-block .cards .card .card-container .pd-card {
     padding-bottom: 15%;
 }
@@ -597,7 +643,7 @@ a{
 }
 .quinto-bloco .right-block .cards .card .card-container:before {
     content: "";
-    width: 12em;
+    width: 100%;
     height: 8px;
     position: absolute;
     background: rgb(76, 74, 88, .1);
@@ -609,6 +655,7 @@ a{
 .sexto-bloco{
     padding: 10% 17% 0 17%;
     background: var(--default-black);
+    color:white;
 }
 .sexto-bloco .cards{
     display: flex;
@@ -619,14 +666,20 @@ a{
     margin: 0px 13px 40px 0;
 }
 .sexto-bloco .cards .card{
-    width: 23.9%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    background: red;
     margin: 0 13px 40px 0;
     align-items: center;
     justify-content: center;
     padding: 6em 0;
+}
+
+.sexto-bloco .cards .card img{
+    max-width: 45px;
+    max-height: 45px;
+    border-radius: 100%;
+    margin: 25px;
 }
 /*Fim sexto bloco*/
 
@@ -1022,9 +1075,76 @@ a{
   opacity:0;
 }
 
+.quinto-bloco .left-block {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    position: relative;
+}
+
+
+.zoom-input {
+    transition: all .35s;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    padding: .5em;
+    display: flex;
+    justify-content: center;
+    margin: 0 35px 0 0;
+    position: absolute;
+    cursor: pointer;
+    z-index: 9;
+    border: 1px solid;
+    top: 20%;
+    right: 20%;
+}
+
+.zoom-input.inactive{
+    transition: all .35s;
+    border-color: var(--color-fifthc);
+    fill: var(--color-fifthc);
+    pointer-events: fill;
+}
+
+.zoom-input.active{
+    transition: all .35s;
+    border-color: var(--button-default-background);
+    fill: var(--button-default-background);
+}
+
+.zoom-input svg{
+    width:100%;
+    height: 100%;
+}
 
 
 
+.ranking{
+    position: absolute;
+}
+
+.ranking svg{
+    width:45px;
+    height: 45px;
+    opacity: 1;
+    filter: drop-shadow(2px 1px 4px #000);
+    cursor: pointer;
+    opacity: .35;
+}
+
+
+.ranking svg.dragged{
+    filter: drop-shadow(2px 1px 25px var(--button-default-background));
+    transform: rotate(0deg) scale(1.25) !important;
+    opacity: 1;
+    z-index: 99;
+}
+
+
+.w-60{
+    width: 60%;
+}
 
 
 /* END BLOCK SLIDER */
