--- a/style.css
+++ b/style.css
@@ -1519,4 +1519,12 @@ footer .direitos span {
     .ranking {
         display: none;
     }
+    .modal-controller .modal-content {
+        width: 90vw;
+        height: 65vh;
+    }
+    .modal-controller .icon-game-over {
+        top: 5%;
+        right: 10%;
+    }
 }
