--- a/keyframes.css
+++ b/keyframes.css
@@ -276,3 +276,21 @@
 	75%  {transform: scale(1);}
 	100% {transform: scale(0.96);}
 }
+
+@keyframes pulse{
+	0%{
+		transform: scale(.75);
+	}
+	25%{
+		transform: scale(1.25);
+	}
+	50%{
+		transform: scale(.75);
+	}
+	75%{
+		transform: scale(1.25);
+	}
+	100%{
+		transform: scale(.75);
+	}
+}
