--- a/animation-guy.css
+++ b/animation-guy.css
@@ -1,93 +1,1 @@
-#sobrancelhas{
-	transform: translateY(-9px);
-	animation: sobrancelhas 5s linear infinite;
-
-}
-
-#nariz{
-	transform: translateY(-9px);
-	-ms-transform: translateY(-9px);
-	-moz-transform: translateY(-9px);
-
-	animation: nariz 5s linear infinite;
-
-}
-
-#boca{
-	transform: translateY(-5px);
-	-ms-transform: translateY(-5px);
-	-moz-transform: translateY(-5px);
-
-	animation: boca 5s linear infinite;
-
-}
-
-#olhos{
-	transform: translateX(-2px);
-	-moz-transform: translateX(-2px);
-	-ms-transform: translateX(-2px);
-
-	animation: olhos 2s linear infinite;
-}
-
-
-#notebook{
-	transform: translateY(-4px);
-	-moz-transform: translateY(-4px);
-	-ms-transform: translateY(-4px);
-
-	animation: notebook 6s linear infinite;
-}
-
-#pernas{
-	transform: translateY(-9px);
-	animation: pernas 6s infinite;
-}
-
-
-#pe{
-
-	animation: pe 6s infinite;
-}
-
-
-
-#camisas{
-	transform: translateY(-9px);
-	-ms-transform: translateY(-9px);
-	-moz-transform: translateY(-9px);
-
-	animation: camisas 6s infinite;
-}
-
-
-#camisacostas{
-	transform: translateY(-9px);
-	-ms-transform: translateY(-9px);
-	-moz-transform: translateY(-9px);
-
-	animation: camisacostas 6s infinite;
-}
-
-
-
-#cabeca{
-	transform: translateY(-9px);
-	-ms-transform: translateY(-9px);
-	-moz-transform: translateY(-9px);
-
-	animation: cabeca 6s infinite;
-}
-
-
-
-#orelhas{
-	animation: orelhas 6s linear infinite;
-}
-
-
-#sombras{
-	animation: sombras 6.1s linear infinite;
-}
-
-
+#sobrancelhas{transform:translateY(-9px);animation:sobrancelhas 5s linear infinite}#nariz{transform:translateY(-9px);-ms-transform:translateY(-9px);-moz-transform:translateY(-9px);animation:nariz 5s linear infinite}#boca{transform:translateY(-5px);-ms-transform:translateY(-5px);-moz-transform:translateY(-5px);animation:boca 5s linear infinite}#olhos{transform:translateX(-2px);-moz-transform:translateX(-2px);-ms-transform:translateX(-2px);animation:olhos 2s linear infinite}#notebook{transform:translateY(-4px);-moz-transform:translateY(-4px);-ms-transform:translateY(-4px);animation:notebook 6s linear infinite}#pernas{transform:translateY(-9px);animation:pernas 6s infinite}#pe{animation:pe 6s infinite}#camisas{transform:translateY(-9px);-ms-transform:translateY(-9px);-moz-transform:translateY(-9px);animation:camisas 6s infinite}#camisacostas{transform:translateY(-9px);-ms-transform:translateY(-9px);-moz-transform:translateY(-9px);animation:camisacostas 6s infinite}#cabeca{transform:translateY(-9px);-ms-transform:translateY(-9px);-moz-transform:translateY(-9px);animation:cabeca 6s infinite}#orelhas{animation:orelhas 6s linear infinite}#sombras{animation:sombras 6.1s linear infinite}
