--- a/keyframes.css
+++ b/keyframes.css
@@ -1,296 +1,1 @@
-@keyframes rotateShake{
-	0%{
-		transform:rotate(-15deg);
-	}
-	50%{
-		transform:rotate(360deg);
-	}
-
-	55%{
-		transform:rotate(300deg);
-	}
-
-	60%{
-		transform:rotate(360deg);
-	}
-
-	100%{
-		transform:rotate(-15deg);
-	}
-}
-
-@keyframes levelUp{
-    0%   {
-		transform: translateY(0);
-		-ms-transform: translateY(0);
-		-moz-transform: translateY(0);
-        opacity:0;
-
-	}
-	100% {
-		transform: translateY(-35px);
-		-moz-transform: translateY(-35px);
-		-ms-transform: translateY(-35px);
-        opacity:1;
-
-	}
-}
-
-@keyframes sobrancelhas {
-	0%   {
-		transform: translateY(-10);
-		-ms-transform: translateY(-10);
-		-moz-transform: translateY(-10);
-
-	}
-	25%  {
-		transform: translateY(0px);
-		-ms-transform: translateY(0px);
-		-moz-transform: translateY(0px);
-
-	}
-	75%  {
-		transform: translateY(0px);
-		-moz-transform: translateY(0px);
-		-ms-transform: translateY(0px);
-	}
-	100% {
-		transform: translateY(10);
-		-moz-transform: translateY(10);
-		-ms-transform: translateY(10)
-
-	}
-}
-
-@keyframes nariz {
-	0%   {
-		transform: translateY(-10);
-		-ms-transform: translateY(-10);
-		-moz-transform: translateY(-10);
-
-	}
-	25%  {
-		transform: translateY(0px);
-		-ms-transform: translateY(0px);
-		-moz-transform: translateY(0px);
-
-	}
-	75%  {
-		transform: translateY(0px);
-		-moz-transform: translateY(0px);
-		-ms-transform: translateY(0px);
-	}
-	100% {
-		transform: translateY(10);
-		-moz-transform: translateY(10);
-		-ms-transform: translateY(10)
-
-	}
-}
-
-@keyframes boca {
-	0%   {
-		transform: translateY(-10);
-		-ms-transform: translateY(-10);
-		-moz-transform: translateY(-10);
-
-	}
-	25%  {
-		transform: translateY(0px);
-		-ms-transform: translateY(0px);
-		-moz-transform: translateY(0px);
-
-	}
-	75%  {
-		transform: translateY(0px);
-		-moz-transform: translateY(0px);
-		-ms-transform: translateY(0px);
-	}
-	100% {
-		transform: translateY(10);
-		-moz-transform: translateY(10);
-		-ms-transform: translateY(10)
-
-	}
-}
-
-@keyframes olhos {
-	0%   {
-		transform: translateX(-2);
-		-ms-transform: translateX(-2);
-		-moz-transform: translateX(-2);
-
-	}
-	25%  {
-		transform: translateX(2px);
-		-moz-transform: translateX(2px);
-		-ms-transform: translateX(2px);
-
-	}
-	75%  {
-		transform: translateX(-2px);
-		-ms-transform: translateX(-2px);
-		-moz-transform: translateX(-2px);
-		
-	}
-	100% {
-		transform: translateX(2);
-		-ms-transform: translateX(2);
-		-moz-transform: translateX(2);
-
-	}
-}
-
-@keyframes notebook {
-	0%   {transform: translateY(-4)}
-	25%  {transform: translateY(0px)}
-	75%  {transform: translateY(0px)}
-	100% {transform: translateY(4)}
-}
-
-@keyframes pernas{
-	0%   {
-		transform: translateY(-10);
-		-ms-transform: translateY(-10);
-		-moz-transform: translateY(-10);
-
-	}
-	25%  {
-		transform: translateY(0px);
-		-ms-transform: translateY(0px);
-		-moz-transform: translateY(0px);
-
-	}
-	75%  {
-		transform: translateY(0px);
-		-moz-transform: translateY(0px);
-		-ms-transform: translateY(0px);
-	}
-	100% {
-		transform: translateY(10);
-		-moz-transform: translateY(10);
-		-ms-transform: translateY(10)
-
-	}
-}
-
-@keyframes pe {
-	0%   {
-		transform: rotateX(2deg);
-		-ms-transform: rotateX(2deg);
-		-moz-transform: rotateX(2deg);
-	}
-	25%  {}
-	75%  {}
-	100% {}
-}
-
-@keyframes camisas {
-	0%   {
-		transform: translateY(-10);
-		-ms-transform: translateY(-10);
-		-moz-transform: translateY(-10);
-
-	}
-	25%  {
-		transform: translateY(0px);
-		-ms-transform: translateY(0px);
-		-moz-transform: translateY(0px);
-
-	}
-	75%  {
-		transform: translateY(0px);
-		-moz-transform: translateY(0px);
-		-ms-transform: translateY(0px);
-	}
-	100% {
-		transform: translateY(10);
-		-moz-transform: translateY(10);
-		-ms-transform: translateY(10)
-
-	}
-}
-
-@keyframes camisacostas {
-	0%   {
-		transform: translateY(-10);
-		-ms-transform: translateY(-10);
-		-moz-transform: translateY(-10);
-
-	}
-	25%  {
-		transform: translateY(0px);
-		-ms-transform: translateY(0px);
-		-moz-transform: translateY(0px);
-
-	}
-	75%  {
-		transform: translateY(0px);
-		-moz-transform: translateY(0px);
-		-ms-transform: translateY(0px);
-	}
-	100% {
-		transform: translateY(10);
-		-moz-transform: translateY(10);
-		-ms-transform: translateY(10)
-
-	}
-}
-
-@keyframes cabeca {
-	0%   {transform: translateY(-8)}
-	25%  {transform: translateY(0px)}
-	75%  {transform: translateY(0px)}
-	100% {transform: translateY(8)}
-}
-
-@keyframes orelhas {
-	0%   {
-		transform: translateY(-10);
-		-ms-transform: translateY(-10);
-		-moz-transform: translateY(-10);
-
-	}
-	25%  {
-		transform: translateY(0px);
-		-ms-transform: translateY(0px);
-		-moz-transform: translateY(0px);
-
-	}
-	75%  {
-		transform: translateY(0px);
-		-moz-transform: translateY(0px);
-		-ms-transform: translateY(0px);
-	}
-	100% {
-		transform: translateY(10);
-		-moz-transform: translateY(10);
-		-ms-transform: translateY(10)
-
-	}
-}
-
-@keyframes sombras {
-	0%   { transform: scale(0.96);}
-	25%  {transform: scale(1);}
-	75%  {transform: scale(1);}
-	100% {transform: scale(0.96);}
-}
-
-@keyframes pulse{
-	0%{
-		transform: scale(.75);
-	}
-	25%{
-		transform: scale(1.25);
-	}
-	50%{
-		transform: scale(.75);
-	}
-	75%{
-		transform: scale(1.25);
-	}
-	100%{
-		transform: scale(.75);
-	}
-}
+@keyframes rotateShake{0%{transform:rotate(-15deg)}50%{transform:rotate(360deg)}55%{transform:rotate(300deg)}60%{transform:rotate(360deg)}100%{transform:rotate(-15deg)}}@keyframes levelUp{0%{transform:translateY(0);-ms-transform:translateY(0);-moz-transform:translateY(0);opacity:0}100%{transform:translateY(-35px);-moz-transform:translateY(-35px);-ms-transform:translateY(-35px);opacity:1}}@keyframes sobrancelhas{0%{transform:translateY(-10);-ms-transform:translateY(-10);-moz-transform:translateY(-10)}25%{transform:translateY(0);-ms-transform:translateY(0);-moz-transform:translateY(0)}75%{transform:translateY(0);-moz-transform:translateY(0);-ms-transform:translateY(0)}100%{transform:translateY(10);-moz-transform:translateY(10);-ms-transform:translateY(10)}}@keyframes nariz{0%{transform:translateY(-10);-ms-transform:translateY(-10);-moz-transform:translateY(-10)}25%{transform:translateY(0);-ms-transform:translateY(0);-moz-transform:translateY(0)}75%{transform:translateY(0);-moz-transform:translateY(0);-ms-transform:translateY(0)}100%{transform:translateY(10);-moz-transform:translateY(10);-ms-transform:translateY(10)}}@keyframes boca{0%{transform:translateY(-10);-ms-transform:translateY(-10);-moz-transform:translateY(-10)}25%{transform:translateY(0);-ms-transform:translateY(0);-moz-transform:translateY(0)}75%{transform:translateY(0);-moz-transform:translateY(0);-ms-transform:translateY(0)}100%{transform:translateY(10);-moz-transform:translateY(10);-ms-transform:translateY(10)}}@keyframes olhos{0%{transform:translateX(-2);-ms-transform:translateX(-2);-moz-transform:translateX(-2)}25%{transform:translateX(2px);-moz-transform:translateX(2px);-ms-transform:translateX(2px)}75%{transform:translateX(-2px);-ms-transform:translateX(-2px);-moz-transform:translateX(-2px)}100%{transform:translateX(2);-ms-transform:translateX(2);-moz-transform:translateX(2)}}@keyframes notebook{0%{transform:translateY(-4)}25%{transform:translateY(0)}75%{transform:translateY(0)}100%{transform:translateY(4)}}@keyframes pernas{0%{transform:translateY(-10);-ms-transform:translateY(-10);-moz-transform:translateY(-10)}25%{transform:translateY(0);-ms-transform:translateY(0);-moz-transform:translateY(0)}75%{transform:translateY(0);-moz-transform:translateY(0);-ms-transform:translateY(0)}100%{transform:translateY(10);-moz-transform:translateY(10);-ms-transform:translateY(10)}}@keyframes pe{0%{transform:rotateX(2deg);-ms-transform:rotateX(2deg);-moz-transform:rotateX(2deg)}}@keyframes camisas{0%{transform:translateY(-10);-ms-transform:translateY(-10);-moz-transform:translateY(-10)}25%{transform:translateY(0);-ms-transform:translateY(0);-moz-transform:translateY(0)}75%{transform:translateY(0);-moz-transform:translateY(0);-ms-transform:translateY(0)}100%{transform:translateY(10);-moz-transform:translateY(10);-ms-transform:translateY(10)}}@keyframes camisacostas{0%{transform:translateY(-10);-ms-transform:translateY(-10);-moz-transform:translateY(-10)}25%{transform:translateY(0);-ms-transform:translateY(0);-moz-transform:translateY(0)}75%{transform:translateY(0);-moz-transform:translateY(0);-ms-transform:translateY(0)}100%{transform:translateY(10);-moz-transform:translateY(10);-ms-transform:translateY(10)}}@keyframes cabeca{0%{transform:translateY(-8)}25%{transform:translateY(0)}75%{transform:translateY(0)}100%{transform:translateY(8)}}@keyframes orelhas{0%{transform:translateY(-10);-ms-transform:translateY(-10);-moz-transform:translateY(-10)}25%{transform:translateY(0);-ms-transform:translateY(0);-moz-transform:translateY(0)}75%{transform:translateY(0);-moz-transform:translateY(0);-ms-transform:translateY(0)}100%{transform:translateY(10);-moz-transform:translateY(10);-ms-transform:translateY(10)}}@keyframes sombras{0%{transform:scale(.96)}25%{transform:scale(1)}75%{transform:scale(1)}100%{transform:scale(.96)}}@keyframes pulse{0%{transform:scale(.75)}25%{transform:scale(1.25)}50%{transform:scale(.75)}75%{transform:scale(1.25)}100%{transform:scale(.75)}}
