--- a/style.css
+++ b/style.css
@@ -1583,6 +1583,8 @@ body.spin:before{
         font-size: 35px;
         color: #fff;
         margin-top: -5px;
+        position: relative;
+        left: -15px;
     }
 
     .double-header {
@@ -1598,7 +1600,7 @@ body.spin:before{
         flex-direction: column;
     }
     .segundo-bloco .right-block .cards .card {
-        width: 60vw;
+        width: 85vw;
         margin: 0 auto 15%;
     }
     .terceiro-bloco {
@@ -2156,14 +2158,176 @@ body.spin:before{
   .accordion .accordion-content {
     opacity: 0;
     max-height: 0;
+    border:1px solid var(--button-default-background);
     overflow: hidden;
     transition: opacity 200ms linear, max-height 200ms linear;
     width: 50%;
     will-change: opacity, max-height;
   }
+
   .accordion .accordion-content p {
     font-size: 1rem;
     font-weight: 300;
     margin: .5em 0;
     padding: 1em;
+  }
+
+  .line-render {
+    position: absolute;
+    margin-left: 59px;
+    margin-top: -103px;
+    height: 158px;
+    overflow: hidden;
+    transform: skewY(30deg) translateY(0);
+
+ }
+
+ .code-animation{
+    transition: all .35s;
+    width: 419px;
+    height: 379px;
+    position: relative;
+    top: -43px;
+    animation: toTop 16s ease-out forwards;
+ }
+
+  .code-animation .lines path {
+    transition: all .35s;
+    stroke-dasharray: 800;
+    stroke-dashoffset: 800;
+  }
+  
+  .code-animation.animating .lines path {
+    transition: all .35s;
+    animation: coding 350ms ease-out forwards;
+  }
+
+  text.Rrrrr {
+    /* font: var(--font-bebas) 20px; */
+    fill: white;
+    font-size: 45px;
+    font-family: var(--font-bebas);
+}
+
+
+
+
+@media only screen and (max-width:992px){
+    .code-guy svg {
+    width: 50vw;
+    height: 36vh;
+    }
+
+    .langs {
+        right: 3%;
+    }
+
+    .direitos {
+        margin: 0 0 0 1.5em;
+    }
+
+    .w-60 {
+        width: 100%;
+    }
+
+    .terceiro-bloco .left-block .box-container {
+        width: 90%;
+    }
+
+    .quinto-bloco .left-block {
+        margin-top: -5em;
+        width: 100%;
+        height: 70vh;
+        pointer-events: none;
+    }
+
+    #sec5-card1-detail{
+        margin: 0 0 50px 0;
+    }
+
+    .bloco-faq {
+        padding: 5%;
+    }
+
+    .accordion button .accordion-title {
+        padding: 1em .25em .5em 0em;
+    }
+
+    .accordion button[aria-expanded=true] + .accordion-content {
+        width: 100%;
+        margin: 20px 0;
+    }
+
+    .accordion .accordion-content {
+        width: 100%;
+    }
+
+    .quinto-bloco .right-block {
+        width: 90vw;
+    }
+
+    .quinto-bloco .left-block .smartcity{
+        width: 100%;
+
+    }
+
+    .zoom-input {
+        right: unset;
+        display: none;
+    }
+
+
+
+    .copy-squad .warns span {
+        margin: 0 .5em 0 0;
+    }
+
+    .animate-guy{
+        position: relative;
+        width: auto;
+    }
+
+    .line-render{
+        position: absolute;
+        margin-left: -66px;
+        margin-top: -58px;
+        height: 71px;
+        overflow: hidden;
+        transform: skewY(30deg) translateY(0);
+    }
+
+    .code-animation {
+        transition: all .35s;
+        width: 40vw;
+        height: 20vh;
+        position: relative;
+        top: 0 !important;
+        -webkit-animation: toTop 16s ease-out forwards;
+        animation: toTop 16s ease-out forwards;
+    }
+
+
+    @-webkit-keyframes toTop{
+        to{
+          top: -53px;
+        }
+    }
+
+    @keyframes toTop{
+        to{
+          top: -53px;
+        }
+    }
+}
+
+  @keyframes toTop{
+      to{
+        top: -253px;
+      }
+  }
+  
+  @keyframes coding {
+    to {
+      stroke-dashoffset: 0;
+    }
   }
