--- a/style.css
+++ b/style.css
@@ -1447,17 +1447,44 @@ footer .direitos span {
     box-shadow: 0px 0px 5px 0px rgba(243,55,69, 1); 
 }
 
+body.spin{
+    overflow: hidden !important;
+}
 
-body.spin:before{
-    position: absolute;
+
+body.spin:before {
+    content: 'LOADING';
+    position: fixed;
     pointer-events: none;
     width: 102%;
     height: 100%;
-    background:white;
-    z-index: 9;
-    display:flex;
-    align-items: center;
-    justify-content:center;
+    background: #d4d9f7;
+    background-image: url(./assets/designergif.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto;
+    z-index: 99999999999;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    overflow: hidden !important;
+    /* padding: 0 0 0 1em; */
+    line-height: 7em;
+    letter-spacing: 2em;
+    font-weight: bold;
+    font-size: 2em;
+}
+
+body.spin:after{
+    content: '';
+    width: 105%;
+    height: 2px;
+    background: var(--default-black);
+    position: absolute;
+    transform: rotate(-11deg);
+    top: 16.35%;
+    left: -25px;
+    z-index: 9999999999999;
 }
 
 
