--- a/style.css
+++ b/style.css
@@ -1488,6 +1488,45 @@ body.spin:after{
 }
 
 
+@media only screen and (max-width:992px){
+    body.spin:after {
+        content: '';
+        width: 105%;
+        height: 1px;
+        background: var(--default-black);
+        position: fixed;
+        transform: rotate(
+    -11deg
+    );
+        top: 27.35%;
+        left: -5px;
+        z-index: 9999999999999;
+    }
+
+    body.spin:before {
+        content: 'LOADING';
+        position: fixed;
+        pointer-events: none;
+        width: 102%;
+        height: 100%;
+        background: #d4d9f7;
+        background-image: url(./assets/designergif.gif);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+        z-index: 99999999999;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        overflow: hidden !important;
+        /* padding: 0 0 0 1em; */
+        line-height: 5em;
+        letter-spacing: 1em;
+        font-weight: bold;
+        font-size: 2em;
+    }
+}
+
 .modal-controller .modal-content .form-content .spin svg{
     width: 40%;
     height: 40%;
