--- a/style.css
+++ b/style.css
@@ -410,12 +410,13 @@ a{
     justify-content: space-around;
 }
 .segundo-bloco .right-block .cards .card {
-    width: 13vw;
+    flex:1;
+    margin: 0 1em;
     /* height: 30vh; */
 }
 .segundo-bloco .right-block .cards .card .card-header{
     /* width: 249.45px; */
-    height: 285px;
+    height: auto;
     display: flex;
     background: white;
     margin: 0;
@@ -1645,6 +1646,15 @@ body.spin:after{
 
 
 @media (max-width: 768px) {
+
+    .call-to-action {
+        right: 20% !important;
+    }
+
+    h2{
+        font-size:27px;
+    }
+
     .desktop-menu{
         display: none;
     }
@@ -1734,9 +1744,13 @@ body.spin:after{
     .modal-controller .modal-content .form-content .btn-submit {
         width: 54%;
     }
+
+    #howorks .left-block{
+        display:none;
+    }
 }
 
-@media (min-width:768px){
+@media only screen and (min-width:768px){
     header{
         height: 55vh;
     }
@@ -1769,7 +1783,7 @@ body.spin:after{
         height: 30vh;
     }
     .segundo-bloco .right-block .cards .card .card-header{
-        width: 249.45px;
+        width: auto;
     }
     .terceiro-bloco .left-block {
         width: 50vw;
@@ -1907,7 +1921,65 @@ body.spin:after{
     }
 }
 
+@media only screen and (max-width:1367px){
+
+    .zoom-input{
+        top: 5%;
+        right: 5%;
+    }
+
+    .bloco-faq{
+        padding: 5% 10%;
+    }
+
+    .quarto-bloco .cards-box .card .card-header {
+        padding: 25px 0 25px 0;
+        text-align: center;
+        position: relative;
+    }
+
+    .quarto-bloco .cards-box .card .card-header svg{
+        width: 90px;
+        height: 90px;
+    }
+
+    .quarto-bloco .cards-box .card:hover .card-header svg {
+        transform: translateX(-117px);
+        width: 95px;
+        height: 95px;
+    }
+
+    .terceiro-bloco h2{
+        font-size:100%;
+    }
+
+    .segundo-bloco .right-block .cards .card .card-content h4, p{
+        font-size: 80%;
+    }
+
+    .terceiro-bloco .right-block .box-container .box-slider .projectSlides svg{
+        left:unset;
+        height: 30%;
+    }
+
+    .terceiro-bloco .left-block .box-container .viking svg{
+        width: 55%;
+    }
+
+    .call-to-action{
+        right: 28%;
+        transform: rotate(0); 
+        width:auto;
+        bottom: 10%;
+    }
+
+    .quarto-bloco {
+        padding: 5%;
+    }
+}
+
 @media (min-width:1366px) and (max-width:1367px) {
+
     .segundo-bloco {
         justify-content: center;
         height: 100vh;
@@ -2222,7 +2294,7 @@ body.spin:after{
   }
   .accordion button[aria-expanded=true] + .accordion-content {
     opacity: 1;
-    max-height: 9em;
+    max-height: 100%;
     transition: all 200ms linear;
     border:1px solid var(--button-default-background);
     border-radius: 15px;
