--- a/assets/SCSS/shared/_notifications.scss
+++ b/assets/SCSS/shared/_notifications.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     font-family: var(--font-roboto);
+    z-index: 999;
 
     .notification{
         transform: translateX(0);
