--- a/assets/SCSS/layout/_card.scss
+++ b/assets/SCSS/layout/_card.scss
@@ -76,6 +76,7 @@
             max-height: 150px;
             width: auto;
             object-fit: contain;
+            width: 100%;
         }
     }
 }
