--- a/assets/SCSS/layout/_breakpoint_768.scss
+++ b/assets/SCSS/layout/_breakpoint_768.scss
@@ -61,6 +61,7 @@
                 width: 100%;
                 .menu-item{
                     margin: var(--space-md);
+                    font-size: var(--md);
                     span{
                         font-size: var(--md);
                     }
