--- a/assets/SCSS/components/_caller.scss
+++ b/assets/SCSS/components/_caller.scss
@@ -9,6 +9,7 @@
 @import './hosplan';
 @import './leads';
 @import './collab';
+@import './case';
 @import './footer';
 @import './advantages';
 @import './devclasses';
